# cpp-veh-dbi

./: .gitignore  CMakeLists.txt  README.md
include/: asm_support.hpp  branch_tracer.hpp  debugger.hpp  handler.hpp  tracer.hpp  utils.hpp
lib/: CMakeLists.txt
lib/include/: asm_support.hpp  branch_tracer.hpp  debugger.hpp  logger.hpp  utils.hpp  vehdbi.hpp
lib/include/impl/: branch_tracer.hpp  dbi.hpp  debugger.hpp
lib/src/: asm_support.cpp  branch_tracer.cpp  dbi.cpp  debugger.cpp  logger.cpp  utils.cpp
sample/: CMakeLists.txt
sample/branchtracer/: CMakeLists.txt  dllmain.cpp  helper.cpp
sample/dllinjector/: CMakeLists.txt
sample/printerdbg/: CMakeLists.txt  custom_handler.cpp  custom_handler.hpp  dllmain.cpp
sample/readme_sample/: CMakeLists.txt  dllmain.cpp
script/: build.ps1  setup.ps1
src/: asm_support.cpp  branch_tracer.cpp  debugger.cpp  utils.cpp
